선택화면 구성완료

--- a/theme.html
+++ b/theme.html
@@ -23,6 +23,16 @@
   <!-- <a href="index.html" class="back">이전으로</a> -->
 </div>
 <div id="watch">
+  <div class="pai_container">
+    <a href="">
+      <img src="./img/pai6_11.png" alt="아침이미지" class="pai6_11 pai">
+    </a>
+    <a href=""><img src="./img/pai11_13.png" alt="점심이미지" class="pai11_13 pai" style="bottom: 500px"></a>
+    <a href=""><img src="./img/pai13_18.png" alt="오후이미지" class="pai13_18 pai"></a>
+    <a href=""><img src="./img/pai18_22.png" alt="저녁이미지" class="pai18_22 pai"></a>
+    <a href=""><img src="./img/pai22_6.png" alt="새벽이미지" class="pai22_6 pai"></a>
+  </div>
+  
   <img id="clock_base" src="./img/clock_img3.png" alt="이미지파일">
 </div>
 </body>
