--- a/theme.html
+++ b/theme.html
@@ -1,76 +1,198 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="https://www.e-mirim.hs.kr/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
   <title>2022 it is IT</title>
 
 </head>
 <body>
-<div style="float: left;">
-  <img src="img/logo.png" class="logo">
-  <hr class="line"/>
-  <span class="header-text">오</span>
-  <span class="header-text">늘</span>
-  <span class="header-text">의</span>
-  <span class="header-text">시</span>
-  <span class="header-text">간</span>
-  <span class="header-text">표</span>
-  <h1>슬기로운 개발 생활</h1>
+<div id="title">
+  <div>
+    <img src="img/logo.png" class="logo">
+    <hr class="line"/>
 
-  <sapn id="morning" class="topic" onclick="topic(this.id)">아침</sapn
-  ><sapn id="lunch" class="topic" onclick="topic(this.id)">점심</sapn
-  ><sapn id="afternoon" class="topic" onclick="topic(this.id)">오후</sapn
-  ><sapn id="dinner" class="topic" onclick="topic(this.id)">저녁</sapn
-  ><sapn id="dawn" class="topic" onclick="topic(this.id)">새벽</sapn>
+    <span class="header-text">오</span>
+    <span class="header-text">늘</span>
+    <span class="header-text">의</span>
+    <span class="header-text">시</span>
+    <span class="header-text">간</span>
+    <span class="header-text">표</span>
 
-  <br>
-  <button id="go" onclick="go()">이동하기</button>
-<!--   <a href="index.html" class="back">이전으로</a>-->
+    <div id="font">
+      <h1>슬기로운 개발 생활</h1>
+    </div>
+    <a href="index.html" id="back">이전으로</a>
+  </div>
 </div>
+
 <div id="watch">
-  <img id="clock_base" src="./img/clock.png" alt="이미지파일">
+  <!--        <img id="clock_base" src="./img/clock.png" alt="이미지파일">-->
+
+  <canvas width='800' height=800' id='canvas'></canvas>
 </div>
+
 <script>
-  function topic(id){
-    let arr = ["morning","lunch","afternoon","dinner","dawn"]
-    for (let i = 0; i < 5; i++) {
-      document.getElementById(arr[i]).style.backgroundColor = 'white';
-      document.getElementById(arr[i]).style.color = '#F5BB00FF';
-    }
-    // console.log(id)
-    switch (id){
-      case "morning":
-        document.getElementById("morning").style.backgroundColor = '#C50909';
-        document.getElementById("morning").style.color = 'white';
-        document.getElementById("clock_base").src = "img/morning.png"
-        break;
-      case "lunch":
-        document.getElementById("lunch").style.backgroundColor = '#CD7106';
-        document.getElementById("lunch").style.color = 'white';
-        document.getElementById("clock_base").src = "img/lunch.png"
-        break;
-      case "afternoon":
-        document.getElementById("afternoon").style.backgroundColor = '#2F9039';
-        document.getElementById("afternoon").style.color = 'white';
-        document.getElementById("clock_base").src = "img/afternoon.png"
-        break;
-      case "dinner":
-        document.getElementById("dinner").style.backgroundColor = '#272B7D';
-        document.getElementById("dinner").style.color = 'white';
-        document.getElementById("clock_base").src = "img/dinner.png"
-        break;
-      case "dawn":
-        document.getElementById("dawn").style.backgroundColor = '#4C1B7D';
-        document.getElementById("dawn").style.color = 'white';
-        document.getElementById("clock_base").src = "img/dawn.png"
-        break;
-    }
-    return id
+  const canvas = document.getElementById('canvas');
+  const ctx = canvas.getContext('2d');
+
+  var width = canvas.clientWidth;
+  var height = canvas.clientHeight;
+
+  var value = [75, 45, 60, 60, 120];
+  var degree = 360;
+  var radius = width * 0.7 / 2;
+
+  if(radius > height * 0.7 / 2){
+    radius = height * 0.7 / 2;
   }
+
+
+
+  var sum = value.reduce((a, b) => a + b);
+  var conv_array = value.slice().map((data)=>{
+    var rate = data / sum;
+    var myDegree = degree * rate;
+    return myDegree;
+  });
+
+
+  degree = 0;
+  var event_array = value.slice().map( arg=> []);
+  for(var i=0;i < conv_array.length;i++){
+    var item = conv_array[i];
+    ctx.save();
+    ctx.beginPath();
+    ctx.moveTo(width/2, height/2);
+    if(i == 0){
+      ctx.arc(width/2, height/2, radius, (Math.PI/180)*0, (Math.PI/180)* item , false);
+      degree = item;
+      event_array[i] = [0, degree];
+    } else {
+      ctx.arc(width/2, height/2, radius, (Math.PI/180)*degree, (Math.PI/180)*(degree + item), false);
+      event_array[i] = [degree, degree+item];
+      degree =  degree + item;
+    }
+    ctx.closePath();
+    ctx.stroke();
+    ctx.restore();
+  }
+
+  var drawed = false;
+  canvas.addEventListener('mousemove', function (event) {
+    var x1 = event.clientX - canvas.offsetLeft;
+    var y1 = event.clientY - canvas.offsetTop;
+    var inn = isInsideArc(x1, y1);
+    //console.log(inn);
+    if(inn.index > -1){
+      drawed = true;
+      hoverCanvas(inn.index);
+      makeText(inn.index);
+    } else {
+      if(drawed){
+        hoverCanvas(-1);
+        makeText(-1);
+      }
+      drawed = false;
+    }
+  });
+
+  function isInsideArc(x1, y1){
+    var result1 = false;
+    var result2 = false;
+    var index = -1;
+    var circle_len = radius;
+    var x = width/2 - x1;
+    var y = height/2 - y1;
+    var my_len = Math.sqrt(Math.abs(x * x) + Math.abs(y * y));  //삼각함수
+    if(circle_len >= my_len){
+      result1 = true;
+    }
+
+    var rad = Math.atan2(y, x);
+    rad = (rad*180)/Math.PI;  //음수가 나온다
+    rad += 180;  //캔버스의 각도로 변경
+
+    if(result1){
+      event_array.forEach( (arr,idx) => {   //각도 범위에 해당하는지 확인
+        if( rad >= arr[0] && rad <= arr[1]){
+          result2 = true;
+          index = idx;
+        }
+      });
+    }
+    return {result1:result1, result2:result2 ,index:index, degree : rad};
+  }
+
+
+  function hoverCanvas(index){
+    ctx.clearRect(0,0,width, height);
+    for (var i = 0; i < conv_array.length; i++) {
+      var item = conv_array[i];
+      ctx.save();
+      ctx.beginPath();
+      var innRadius = radius;
+      ctx.moveTo(width / 2 , height / 2 );
+      if(index == i){
+        ctx.lineWidth = 2;
+
+        switch (index){
+          case 0:ctx.strokeStyle='red'; break;
+          case 1:ctx.strokeStyle='yellow'; break;
+          case 2:ctx.strokeStyle='green'; break;
+          case 3:ctx.strokeStyle='blue'; break;
+          case 4:ctx.strokeStyle='purple'; break;
+        }
+
+        innRadius = radius * 1.1;
+      }
+      if (i == 0) {
+        ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * 0, (Math.PI / 180) * item, false);
+        degree = item;
+      } else {
+        ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * degree, (Math.PI / 180) * (degree + item), false);
+        degree = degree + item;
+      }
+      ctx.closePath();
+      ctx.stroke();
+      ctx.restore();
+    }
+  }
+
+
+  //도(degree)를 라디안(radian)으로 바꾸는 함수
+  function degreesToRadians(degrees) {
+    const pi = Math.PI;
+    return degrees * (pi / 180);
+  }
+
+  function makeText(index){
+    event_array.forEach((itm, idx) => {
+      var half = (itm[1] - itm[0]) / 2;
+      var degg = itm[0] + half;
+      var xx = Math.cos(degreesToRadians(degg)) * radius * 0.7 + width / 2;
+      var yy = Math.sin(degreesToRadians(degg)) * radius * 0.7 + height / 2;
+      var time = ['아침', '점심', '오후', '저녁', '새벽']
+      var txt = time[idx] + '';
+      var minus = ctx.measureText(txt).width / 2;  //텍스트 절반길이
+      ctx.save();
+      if(index == idx){
+        ctx.font = "normal bold 20px serif";
+
+      } else {
+        ctx.font = "normal bold 20px serif";
+        ctx.fontSize = '20pt'
+      }
+      ctx.fillText(txt, xx - minus, yy);
+      ctx.restore();
+    });
+  }
+  makeText(-1);  //최초 호출
+
 </script>
 </body>
 </html>
