아날로그 시계

--- a/theme.html
+++ b/theme.html
@@ -36,7 +36,21 @@
   <!--        <img id="clock_base" src="./img/clock.png" alt="이미지파일">-->
 
   <a href="#" class="page-link">
-    <canvas width='800' height='800' id='canvas'></canvas>
+    <canvas width='800' height='800' id='canvas'>
+      
+    </canvas>
+    <div class="clock">
+      <div class="hour">
+          <div id="hr" class="hr"></div>
+      </div>
+      <div class="min">
+          <div id="mn" class="mn"></div>
+      </div>
+      <div class="sec">
+          <div id="sc" class="sc"></div>
+      </div>
+    </div>
+    <script src="./js/clock.js"></script>
 </a>
 </div>
 
