--- a/theme.html
+++ b/theme.html
@@ -1,239 +1,257 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="https://www.e-mirim.hs.kr/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/theme.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-  <title>2022 it is IT</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="https://www.e-mirim.hs.kr/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/clock.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <title>2022 it is IT</title>
 
 </head>
 <body>
 <div id="title">
-  <div>
-    <a href="index.html"><img src="img/logo.png" class="logo"></a>
-    <hr class="line"/>
+    <div>
+        <a href="index.html"><img src="img/logo.png" class="logo"></a>
+        <hr class="line"/>
 
-    <span class="header-text">오</span>
-    <span class="header-text">늘</span>
-    <span class="header-text">의</span>
-    <span class="header-text">시</span>
-    <span class="header-text">간</span>
-    <span class="header-text">표</span>
+        <span class="header-text">오</span>
+        <span class="header-text">늘</span>
+        <span class="header-text">의</span>
+        <span class="header-text">시</span>
+        <span class="header-text">간</span>
+        <span class="header-text">표</span>
 
-    <div id="font">
-      <h1>슬기로운 개발 생활</h1>
+        <div id="font">
+            <h1>슬기로운 개발 생활</h1>
+        </div>
+
+        <a href="index.html" class="back">이전으로</a>
     </div>
-  </div>
 </div>
 
 <div id="watch">
-  <!--        <img id="clock_base" src="./img/clock.png" alt="이미지파일">-->
 
-  <a href="#" class="page-link">
-    <canvas width='800' height='800' id='canvas'>
-      
-    </canvas>
-    <div class="clock">
-      <div class="hour">
-          <div id="hr" class="hr"></div>
-      </div>
-      <div class="min">
-          <div id="mn" class="mn"></div>
-      </div>
-      <div class="sec">
-          <div id="sc" class="sc"></div>
-      </div>
-    </div>
-    <script src="./js/clock.js"></script>
-</a>
+    <a href="#" class="page-link">
+        <img id="clock_base" src="./img/clock.png" alt="이미지파일" width="615" style="float:left; margin-top:42px; margin-left:216px; position:absolute">
+        <canvas width='800' height='800' id='canvas'></canvas>
+
+        <div class="clock">
+            <div class="hour">
+                <div id="hr" class="hr"></div>
+            </div>
+            <div class="min">
+                <div id="mn" class="mn"></div>
+            </div>
+            <div class="sec">
+                <div id="sc" class="sc"></div>
+            </div>
+        </div>
+
+        <script src="./js/clock.js"></script>
+    </a>
 </div>
 
 <script>
-  const canvas = document.getElementById('canvas');
-  const link = document.querySelector('.page-link');
-  const ctx = canvas.getContext('2d');
+    const canvas = document.getElementById('canvas');
+    const link = document.querySelector('.page-link');
+    const ctx = canvas.getContext('2d');
 
-  var width = canvas.clientWidth;
-  var height = canvas.clientHeight;
+    var width = canvas.clientWidth;
+    var height = canvas.clientHeight;
 
-  var value = [75, 45, 60, 60, 120];
-  var degree = 360;
-  var radius = width * 0.7 / 2;
+    var value = [75, 45, 60, 60, 120];
+    var degree = 360;
+    var radius = width * 0.7 / 2;
 
-  if(radius > height * 0.7 / 2){
-    radius = height * 0.7 / 2;
-  }
-
-
-
-  var sum = value.reduce((a, b) => a + b);
-  var conv_array = value.slice().map((data)=>{
-    var rate = data / sum;
-    var myDegree = degree * rate;
-    return myDegree;
-  });
-
-
-  degree = 0;
-  var event_array = value.slice().map( arg=> []);
-  for(var i=0;i < conv_array.length;i++){
-    var item = conv_array[i];
-    ctx.save();
-    ctx.beginPath();
-    ctx.moveTo(width/2, height/2);
-    if(i == 0){
-      ctx.arc(width/2, height/2, radius, (Math.PI/180)*0, (Math.PI/180)* item , false);
-      degree = item;
-      event_array[i] = [0, degree];
-    } else {
-      ctx.arc(width/2, height/2, radius, (Math.PI/180)*degree, (Math.PI/180)*(degree + item), false);
-      event_array[i] = [degree, degree+item];
-      degree =  degree + item;
-    }
-    ctx.closePath();
-    ctx.stroke();
-    ctx.restore();
-  }
-
-  var drawed = false;
-  canvas.addEventListener('mousemove', function (event) {
-    var x1 = event.clientX - canvas.offsetLeft;
-    var y1 = event.clientY - canvas.offsetTop;
-    var inn = isInsideArc(x1, y1);
-    //console.log(inn);
-    if(inn.index > -1){
-      drawed = true;
-      hoverCanvas(inn.index);
-      makeText(inn.index);
-    } else {
-      if(drawed){
-        hoverCanvas(-1);
-        makeText(-1);
-      }
-      drawed = false;
-    }
-  });
-
-  function isInsideArc(x1, y1){
-    var result1 = false;
-    var result2 = false;
-    var index = -1;
-    var circle_len = radius;
-    var x = width/2 - x1;
-    var y = height/2 - y1;
-    var my_len = Math.sqrt(Math.abs(x * x) + Math.abs(y * y));  //삼각함수
-
-    link.href = ''; // 링크 초기화
-    if(circle_len >= my_len){
-      result1 = true;
+    if(radius > height * 0.7 / 2){
+        radius = height * 0.7 / 2;
     }
 
-    var rad = Math.atan2(y, x);
-    rad = (rad*180)/Math.PI;  //음수가 나온다
-    rad += 180;  //캔버스의 각도로 변경
-
-    if(result1){
-      event_array.forEach( (arr,idx) => {   //각도 범위에 해당하는지 확인
-        if( rad >= arr[0] && rad <= arr[1]){
-          result2 = true;
-          index = idx;
-        }
-      });
-    }
-    return {result1:result1, result2:result2 ,index:index, degree : rad};
-  }
 
 
-  function hoverCanvas(index){
-    ctx.clearRect(0,0,width, height);
-    for (var i = 0; i < conv_array.length; i++) {
-      var item = conv_array[i];
-      ctx.save();
-      ctx.beginPath();
-      var innRadius = radius;
-      ctx.moveTo(width / 2 , height / 2 );
-      if(index == i){
-        ctx.lineWidth = 2;
-        
-        link.hr
-
-        switch (index){
-          case 0:{
-            ctx.strokeStyle='red';  
-            link.href = 'https://github.com/';
-            break;
-          }
-          case 1:{
-            ctx.strokeStyle='yellow'; 
-            link.href = 'https://naver.com/';
-            break;
-          }
-          case 2:{
-            ctx.strokeStyle='green'; 
-            link.href = 'https://youtube.com/';
-            break;
-          }
-          case 3:{
-            ctx.strokeStyle='blue'; 
-            link.href = 'https://apple.com/';
-            break;
-          }
-          case 4:{
-            ctx.strokeStyle='purple'; 
-            link.href = 'https://google.com/';
-            break;
-          }
-        }
-
-        innRadius = radius * 1.1;
-      }
-      if (i == 0) {
-        ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * 0, (Math.PI / 180) * item, false);
-        degree = item;
-      } else {
-        ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * degree, (Math.PI / 180) * (degree + item), false);
-        degree = degree + item;
-      }
-      ctx.closePath();
-      ctx.stroke();
-      ctx.restore();
-    }
-  }
-
-
-  //도(degree)를 라디안(radian)으로 바꾸는 함수
-  function degreesToRadians(degrees) {
-    const pi = Math.PI;
-    return degrees * (pi / 180);
-  }
-
-  function makeText(index){
-    event_array.forEach((itm, idx) => {
-      var half = (itm[1] - itm[0]) / 2;
-      var degg = itm[0] + half;
-      var xx = Math.cos(degreesToRadians(degg)) * radius * 0.7 + width / 2;
-      var yy = Math.sin(degreesToRadians(degg)) * radius * 0.7 + height / 2;
-      var time = ['아침', '점심', '오후', '저녁', '새벽']
-      var txt = time[idx] + '';
-      var minus = ctx.measureText(txt).width / 2;  //텍스트 절반길이
-      ctx.save();
-      if(index == idx){
-        ctx.font = "normal 20px 'Noto Sans KR', sans-serif";
-      } else {
-        ctx.font = "normal 20px 'Noto Sans KR', sans-serif";
-        ctx.fontSize = '20pt'
-      }
-      ctx.fillText(txt, xx - minus, yy);
-      ctx.restore();
+    var sum = value.reduce((a, b) => a + b);
+    var conv_array = value.slice().map((data)=>{
+        var rate = data / sum;
+        var myDegree = degree * rate;
+        return myDegree;
     });
-  }
-  makeText(-1);  //최초 호출
+
+
+    degree = 0;
+    var event_array = value.slice().map( arg=> []);
+    for(var i=0;i < conv_array.length;i++){
+        var item = conv_array[i];
+        ctx.save();
+        ctx.beginPath();
+        ctx.moveTo(width/2, height/2);
+        if(i == 0){
+            ctx.arc(width/2, height/2, radius, (Math.PI/180)*0, (Math.PI/180)* item , false);
+            degree = item;
+            event_array[i] = [0, degree];
+        } else {
+            ctx.arc(width/2, height/2, radius, (Math.PI/180)*degree, (Math.PI/180)*(degree + item), false);
+            event_array[i] = [degree, degree+item];
+            degree =  degree + item;
+        }
+
+        ctx.closePath();
+        ctx.restore();
+    }
+
+    var drawed = false;
+    canvas.addEventListener('mousemove', function (event) {
+        var x1 = event.clientX - canvas.offsetLeft;
+        var y1 = event.clientY - canvas.offsetTop;
+        var inn = isInsideArc(x1, y1);
+        //console.log(inn);
+        if(inn.index > -1){
+            drawed = true;
+            hoverCanvas(inn.index);
+            makeText(inn.index);
+        } else {
+            if(drawed){
+                hoverCanvas(-1);
+                makeText(-1);
+            }
+            drawed = false;
+        }
+    });
+
+    function isInsideArc(x1, y1){
+        var result1 = false;
+        var result2 = false;
+        var index = -1;
+        var circle_len = radius;
+        var x = width/2 - x1;
+        var y = height/2 - y1;
+        var my_len = Math.sqrt(Math.abs(x * x) + Math.abs(y * y));  //삼각함수
+
+        link.href = ''; // 링크 초기화
+        if(circle_len >= my_len){
+            result1 = true;
+        }
+
+        var rad = Math.atan2(y, x);
+        rad = (rad*180)/Math.PI;  //음수가 나온다
+        rad += 180;  //캔버스의 각도로 변경
+
+        if(result1){
+            event_array.forEach( (arr,idx) => {   //각도 범위에 해당하는지 확인
+                if( rad >= arr[0] && rad <= arr[1]){
+                    result2 = true;
+                    index = idx;
+                }
+            });
+        }
+        return {result1:result1, result2:result2 ,index:index, degree : rad};
+    }
+
+
+    function hoverCanvas(index){
+        ctx.clearRect(0,0,width, height);
+        for (var i = 0; i < conv_array.length; i++) {
+            var item = conv_array[i];
+            ctx.save();
+            ctx.beginPath();
+            var innRadius = radius;
+            ctx.moveTo(width / 2 , height / 2 );
+            if(index == i){
+                ctx.lineWidth = 2;
+
+                link.hr
+
+                switch (index){
+                    case 0:{
+                        ctx.fillStyle = 'rgba(252,207,134,0.7)'
+                        ctx.strokeStyle='#FFCF86';
+                        link.href = 'https://github.com/';
+                        break;
+                    }
+                    case 1:{
+                        ctx.fillStyle = 'rgba(252,236,188,0.8)'
+                        ctx.strokeStyle='#FFCF86';
+                        link.href = 'https://naver.com/';
+                        break;
+                    }
+                    case 2:{
+                        ctx.fillStyle = 'rgba(205,234,191,0.7)'
+                        ctx.strokeStyle='#CDEABF';
+                        link.href = 'https://youtube.com/';
+                        break;
+                    }
+                    case 3:{
+                        ctx.fillStyle = 'rgba(183,201,229,0.7)'
+                        ctx.strokeStyle='#B7C9E5';
+                        link.href = 'https://apple.com/';
+                        break;
+                    }
+                    case 4:{
+                        ctx.fillStyle = 'rgba(191,178,225,0.7)'
+                        ctx.strokeStyle='#BFB2E1';
+                        link.href = 'https://google.com/';
+                        break;
+                    }
+                    default:{
+                        ctx.fillStyle = 'rgba(255,255,255,0)'
+                        ctx.strokeStyle='rgba(255,255,255,0)';
+                        break;
+                    }
+                }
+
+                innRadius = radius * 1.1;
+            }else{
+                ctx.fillStyle = 'rgba(255,255,255,0)'
+                ctx.strokeStyle = 'rgba(255,255,255,0)'
+            }
+
+            if (i == 0) {
+                ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * 0, (Math.PI / 180) * item, false);
+                degree = item;
+            } else {
+                ctx.arc(width / 2, height / 2, innRadius, (Math.PI / 180) * degree, (Math.PI / 180) * (degree + item), false);
+                degree = degree + item;
+            }
+            ctx.closePath();
+            ctx.fill()
+            ctx.stroke();
+            ctx.restore();
+        }
+    }
+
+
+    //도(degree)를 라디안(radian)으로 바꾸는 함수
+    function degreesToRadians(degrees) {
+        const pi = Math.PI;
+        return degrees * (pi / 180);
+    }
+
+    function makeText(index){
+        event_array.forEach((itm, idx) => {
+            var half = (itm[1] - itm[0]) / 2;
+            var degg = itm[0] + half;
+            var xx = Math.cos(degreesToRadians(degg)) * radius * 0.7 + width / 2;
+            var yy = Math.sin(degreesToRadians(degg)) * radius * 0.7 + height / 2;
+            var time = ['아침', '점심', '오후', '저녁', '새벽']
+            var txt = time[idx] + '';
+            var minus = ctx.measureText(txt).width / 2;  //텍스트 절반길이
+            ctx.save();
+            if(index == idx){
+                ctx.font = "normal 20px 'Noto Sans KR', sans-serif";
+            } else {
+                ctx.font = "normal 20px 'Noto Sans KR', sans-serif";
+                ctx.fontSize = '20pt'
+            }
+            ctx.fillText(txt, xx - minus, yy);
+            ctx.restore();
+        });
+    }
+    makeText(-1);  //최초 호출
 
 </script>
 </body>
