디자인과 인스타 링크 연결

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <td width="8%" align="center">
                     <div>
                         <div class="menu_bg"></div>
-                        <a href="worldmap.html">
+                        <a href="https://www.instagram.com/mirim_ddd/">
                             <div class="menu">
                                 <p class="menu_title">
                                     디자인교과<br>작품전<br>보러가기<br>
