--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <!--slide show-->
     <div class="slideshow-container slide1" id="slide">
         <img src="img/slide1.png" class="slide_img" id="slide_img_1" style="width:100%; height:500px;"/>
-        <div class="slide_img" id="slide_img_2" style="width:100%; height:500px; background-color:orange"></div>
-        <div class="slide_img" id="slide_img_3" style="width:100%; height:500px; background-color:yellow"></div>
-        <div class="slide_img" id="slide_img_4" style="width:100%; height:500px; background-color:green"></div>
+        <img src="img/slide2.png" class="slide_img" id="slide_img_2" style="width:100%; height:500px;"/>
+        <img src="img/slide3.png" class="slide_img" id="slide_img_3" style="width:100%; height:500px;"/>
+        <img src="img/slide4.png" class="slide_img" id="slide_img_4" style="width:100%; height:500px;"/>
     </div>
     <!--end of slide show-->
 
